	* fixed "coach is watching" that would not detect user's blunders
	* show variations window improved
	* up arrow leaves current variation if at start of variation (like z shorcut)
	* Fix XML decoding issue for CC (special chars like ' & < > " etc.)
	* Fixed a bug in opening trainer (due to pieces translation)
	* Fixed a bug in scmerge
- Correspondence chess: feature complete. xfcc is done internally or via external tools, email chess is handled by external mail programs, sychronisation of either input against a specific local DB, help pages added, automatic setup added, xfcc config dialog available.
- Pocket PC :
	* Memory optimisation : will spare 800 kB to 1 MB
	* Most widgets are now themable (note that some themes don't work well with some resolutions : it is up to the user to make his choice).
	* Search headers and board completely reworked
	* Greko 5.7
- Correspondence Chess: Hook up window with scids internal geometry manager and add some optional Xfcc flags provided by SchemingMind in near future (player countries, FIDE and ICCF-IDs).
- Fix bug in email chess which sent the annotated game to your opponent.
- Hardened the code in sc_base_open so in case of failure in opening a base, things are cleaned up (most of the code concerns Scid Pocket, but some is also used for PC version).
- updated swedish translation (thanks to Hans Eriksson)
- updated spanish translation (thanks to Benigno Hernández)

[December 2008 ?]

scid-3.6.25
-----------
- Opening trainer : 
   * automatic switch to clipbase
   * trainer window easier to understand
- Removed Crafty engine, as tacgame.tcl does not need it any longer. So the two mandatory engines for Scid's features are Toga and Phalanx. Note that any Toga version should work, but only the patched version of Phalanx works.
- Correspondence Chess: do not drop a comment from the move list if one is sent via message. Add a visual indicator to the game list if a comment was sent by the opponent.